# vibe-signal

./: .gitignore  README 2.md  README.md  portfolio_update_summary.md  pyproject.toml  requirements-render.txt  requirements.txt  start_vibe_backend.sh
.github/: pull_request_template.md
app/: README.md
backend/: README.md  __init__.py  app.py  config.py  deployment.env.example  monitoring.py  schemas.py  storage.py
configs/: claims_matrix.example.yml  cue_confusion_groups.yml  private_training_sources.example.yml  public_copy_safety_allowlist.yml  synthetic_whatsapp_pattern_training.yml  transcript_nlp_local_research_training.yml  vibe_cue_taxonomy.yml  vibe_resource_registry.example.yml  vibe_training_sources.example.yml
docs/: backend_connection.md  backend_deployment_readiness.md  claims_matrix.md  closed_beta_monitoring_incident_runbook.md  closed_beta_qa_evidence.md  closed_beta_readiness_checklist.md  closed_beta_tester_instructions.md  data_deletion_export.md  data_deletion_request_draft.md  data_export_request_draft.md  data_rights_and_consent_policy.md  dataset_attribution.md  datasets_rights.md  dependency_matrix.md  deployment_smoke_tests.md  device_qa_script.md  ethical_engagement_principles.md  evaluation_claims_matrix.md  experiments_plan.md  feature_scope.md  final_closed_beta_launch_gate_report.md  handoff_status.md  hosted_web_deployment.md  human_review_guidelines_vibe.md  iphone_sandbox_destruction_test_plan.md  legal_safe_output_policy.md  match_usage_consent_disclaimer.md  migration_plan.md  mobile_local_first_provider_plan.md  (+14 more)
mobile/: App.js  (+8 more)
(+676 files in other folders)
